--- a/wizard_design.ui
+++ b/wizard_design.ui
@@ -17,7 +17,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Medic Insights Placement Sorter - v0.1</string>
+   <string>Medic Insight Placement Allocation Program - v0.2</string>
   </property>
   <property name="windowIcon">
    <iconset>
@@ -56,9 +56,9 @@
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_9">
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_9">
+         <layout class="QHBoxLayout" name="LogoLayout_0">
           <item>
-           <spacer name="horizontalSpacer_12">
+           <spacer name="LogoSpacerLeft_0">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
@@ -71,7 +71,7 @@
            </spacer>
           </item>
           <item>
-           <widget class="QLabel" name="label_5">
+           <widget class="QLabel" name="MedicInsightLogo_0">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -99,7 +99,7 @@
            </widget>
           </item>
           <item>
-           <spacer name="horizontalSpacer_11">
+           <spacer name="LogoSpacerRight_0">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
@@ -130,19 +130,22 @@
          </spacer>
         </item>
         <item>
-         <widget class="QTextBrowser" name="textBrowser">
+         <widget class="QTextBrowser" name="textBrowser_Welcome">
           <property name="html">
            <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Welcome to the Medic Insights Placement Sorter wizard.&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Welcome to the Medic Insight Placement Allocation Program wizard.&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Here you can blah blah blah.&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;This software will allocate students to clinical placements prioritising in this order:&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;For instruction please see the blah blah manual.&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;  1) Provide placement in the closest hospital to the student's home&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;  2) Provide placements on the same day&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;  3) Provide placements within the same hospital or site (e.g. QEUH and RHC)&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;  4) Provide placements of varying types (e.g. ward and clinic)&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Please provide Max with text to put here.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;For guidance on how to use this software and for troubleshooting, please refer to the manual on the google drive called &amp;quot;MI Placement Allocation Program Manual&amp;quot;.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
          </widget>
         </item>
@@ -175,12 +178,12 @@ p, li { white-space: pre-wrap; }
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
-      <widget class="QWidget" name="">
+      <widget class="QWidget" name="layoutWidget">
        <layout class="QVBoxLayout" name="verticalLayout_10">
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_5">
+         <layout class="QHBoxLayout" name="LogoLayout_1">
           <item>
-           <spacer name="horizontalSpacer_6">
+           <spacer name="LogoSpacerLeft_1">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
@@ -193,7 +196,7 @@ p, li { white-space: pre-wrap; }
            </spacer>
           </item>
           <item>
-           <widget class="QLabel" name="label_2">
+           <widget class="QLabel" name="MedicInsightLogo_1">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -221,7 +224,7 @@ p, li { white-space: pre-wrap; }
            </widget>
           </item>
           <item>
-           <spacer name="horizontalSpacer_13">
+           <spacer name="LogoSpacerRight_1">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
@@ -238,7 +241,7 @@ p, li { white-space: pre-wrap; }
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_3">
           <item>
-           <widget class="QLabel" name="label_APIMessage">
+           <widget class="QLabel" name="label_ApiKeyMessage">
             <property name="font">
              <font>
               <pointsize>10</pointsize>
@@ -252,7 +255,7 @@ p, li { white-space: pre-wrap; }
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_11">
             <item>
-             <widget class="QLabel" name="label_InputFilePath_2">
+             <widget class="QLabel" name="label_ApiKey">
               <property name="font">
                <font>
                 <pointsize>10</pointsize>
@@ -264,14 +267,14 @@ p, li { white-space: pre-wrap; }
              </widget>
             </item>
             <item>
-             <widget class="QLineEdit" name="lineEdit_InputFilePath_2">
+             <widget class="QLineEdit" name="lineEdit_ApiKey">
               <property name="text">
                <string/>
               </property>
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="pushButton_APIkeyTest">
+             <widget class="QPushButton" name="pushButton_ApikeyTest">
               <property name="text">
                <string>Test key</string>
               </property>
@@ -416,9 +419,9 @@ p, li { white-space: pre-wrap; }
     <item row="0" column="0">
      <layout class="QVBoxLayout" name="verticalLayout_8">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_7">
+       <layout class="QHBoxLayout" name="LogoLayout_2">
         <item>
-         <spacer name="horizontalSpacer_7">
+         <spacer name="LogoSpacerLeft_2">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
@@ -431,7 +434,7 @@ p, li { white-space: pre-wrap; }
          </spacer>
         </item>
         <item>
-         <widget class="QLabel" name="label_3">
+         <widget class="QLabel" name="MedicInsightLogo_2">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
             <horstretch>0</horstretch>
@@ -459,7 +462,7 @@ p, li { white-space: pre-wrap; }
          </widget>
         </item>
         <item>
-         <spacer name="horizontalSpacer_14">
+         <spacer name="LogoSpacerRight_2">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
@@ -510,7 +513,7 @@ p, li { white-space: pre-wrap; }
            </spacer>
           </item>
           <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_3">
+           <layout class="QHBoxLayout" name="startButtonLayout">
             <item>
              <widget class="QPushButton" name="startButton">
               <property name="minimumSize">
@@ -525,7 +528,7 @@ p, li { white-space: pre-wrap; }
              </widget>
             </item>
             <item>
-             <spacer name="horizontalSpacer_3">
+             <spacer name="startSpacer">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
               </property>
@@ -540,11 +543,7 @@ p, li { white-space: pre-wrap; }
            </layout>
           </item>
           <item>
-           <widget class="QProgressBar" name="progressBar">
-            <property name="value">
-             <number>24</number>
-            </property>
-           </widget>
+           <widget class="QProgressBar" name="progressBar"/>
           </item>
           <item>
            <spacer name="verticalSpacer_4">
@@ -588,9 +587,9 @@ p, li { white-space: pre-wrap; }
     <item row="0" column="0">
      <layout class="QVBoxLayout" name="verticalLayout_7">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_8">
+       <layout class="QHBoxLayout" name="LogoLayout_3">
         <item>
-         <spacer name="horizontalSpacer_8">
+         <spacer name="LogoSpacerLeft_3">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
@@ -603,7 +602,7 @@ p, li { white-space: pre-wrap; }
          </spacer>
         </item>
         <item>
-         <widget class="QLabel" name="label_4">
+         <widget class="QLabel" name="MedicInsightLogo_3">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
             <horstretch>0</horstretch>
@@ -631,7 +630,7 @@ p, li { white-space: pre-wrap; }
          </widget>
         </item>
         <item>
-         <spacer name="horizontalSpacer_15">
+         <spacer name="LogoSpacerRight_3">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
